# cjsonx

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.bat  build.sh  files.txt  generate_table.py  index.html  mkdocs.yml  pyproject.toml  run_test_suite.sh  setup.py
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cflite_batch.yml  cflite_pr.yml  docs.yml  linux.yml  macos.yml  publish.yml  release.yml  sanitizers.yml  wasm.yml  windows.yml
algorithm/: index.html
api_reference/: index.html
benchmarks/: CMakeLists.txt  bench_compare.c  bench_gotos.c  bench_parse.c  download_datasets.sh  download_third_party.sh
cjsonx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
demo/: app.js  cjsonx_wasm.js  cjsonx_wasm.wasm  style.css
docs/: algorithm.md  api_reference.md  index.md
docs/demo/: app.js  cjsonx_wasm.js  cjsonx_wasm.wasm  cjsonx_wasm_simd.js  cjsonx_wasm_simd.wasm  index.html
examples/: CMakeLists.txt  builder_api.c  dom_access.c  embedded_noalloc.c  error_handling.c  float128_precision.c  simple_parse.c
examples/c/: builder_api.c  dom_access.c  embedded_noalloc.c  error_handling.c  float128_precision.c  simple_parse.c
examples/cpp/: cpp_wrapper_example.cpp  iteration_and_pointers.cpp  run_cpp_example
examples/js/: error_handling.js  json_pointer.js  nodejs_example.js  to_js_object.js
examples/python/: error_handling.py  file_io.py  iteration.py  json_pointer.py  python_example.py
include/: cjsonx.h  cjsonx.hpp  cjsonx_arena.h  cjsonx_builder.h  cjsonx_config.h  cjsonx_dom.h  cjsonx_eisel_lemire.h  cjsonx_error.h  cjsonx_fastfloat.h  cjsonx_stage1.h  cjsonx_stage2.h  cjsonx_string.h  cjsonx_tape.h  cjsonx_utf8.h
include/cjsonx_backends/: cjsonx_avx2.h  cjsonx_neon.h  cjsonx_scalar.h  cjsonx_wasm.h
js/: build.js  build_wasm.sh  cjsonx.d.ts  cjsonx.js  package-lock.json  package.json  wasm_wrapper.c
python/: cjsonx_python.cpp
rust/: Cargo.toml  build.rs
rust/examples/: error_handling.rs  rust_example.rs
rust/src/: lib.rs
scripts/: amalgamate.py  bump_version.py  format.sh  generate_table.c  generate_table.py  test_el.py
search/: search_index.json
single_include/: cjsonx.h
src/: cjsonx.c  cjsonx.h
tests/: CMakeLists.txt  fuzz_parser.c  fuzzer.c  run_test_suite.sh  test_allocator.c  test_amalgamated.c  test_bomb.c  test_builder.c  test_builder_remove.c  test_conformance.c  test_control_char.c  test_el.py  test_fastfloat.c  test_helpers.h  test_js.js  test_pointer.c  test_precision.c  test_python.py  test_stage1.c  test_stage2.c  test_static_buffer.c  test_stringify.c  test_suite.c  test_truefalse.c  test_utf8.c
