[build-system]
requires = ["setuptools>=42", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cjsonx"
version = "1.1.1"
description = "High-performance C11 JSON parser python bindings"
authors = [{name = "jirawat siripuk"}]
readme = "README.md"
requires-python = ">=3.8"
